Repaired drop-down
Spelling errors corrected: Drop-down now include functional ischemic heart disease cost per capita.

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 "text": " Heart Failure",
                 "cat": "expenditure"
             },
-            "ihdPrevOption": { // Ischemic Heart Disease
+            "ihdPrevOption": { // Ischemi Heart Disease
                 "value": "ihdPrev", //Prevalence
                 "calc": "Ischemic_Heart_Disease_Prev",
                 "symb": "%",
@@ -365,7 +365,7 @@
 
             "ihdExpOption": { // Ischemic Heart Disease
                 "value": "ihdExp", // Expenditure
-                "calc": "Ischemic_Heart_Disease_Exp",
+                "calc": "Ishcemic_Heart_Disease_Exp",
                 "symb": "$",
                 "avgKY": "20384.6",
                 "avgUS": "18150.6",
