--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         h6 {
             font-family: Lato, sans-serif;
             letter-spacing: 3px;
-            font-size: 1em;
+            font-size: 1.3em;
         }
 
         h7 {
@@ -878,8 +878,8 @@
 
                 legendDiv.innerHTML +=
                     `<span style="background:${color}"></span>
-          <label>${breaks[i][0].toLocaleString()}&mdash; 
-            ${breaks[i][1].toLocaleString()}</label>`;
+          <label>${parseFloat(breaks[i][0]).toLocaleString(en="US",{maximumFractionDigits:2})}&mdash; 
+            ${parseFloat(breaks[i][1]).toLocaleString(en="US",{maximumFractionDigits:2})}</label>`;
             }
 
             return legendDiv; // return legendDiv element
