--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         h2 {
             display: inline-block;
+            margin: 15px 0px 5px 0;
             font-family: Lato, sans serif;
             text-transform: uppercase;
             color: #001323;
@@ -85,6 +86,7 @@
             font-family: Lato, sans-serif;
             letter-spacing: 3px;
             font-size: 1.3em;
+            margin: 10px 0px 10px 0px;
         }
 
         h7 {
@@ -120,6 +122,7 @@
         }
 
         #theList div {
+
             float: left;
             width: 280px;
         }
@@ -136,7 +139,7 @@
         footer {
             /*padding: 6px 10%; */
             width: 100%;
-            margin: 15px auto 20px 60px;
+            margin: 5px auto 10px 60px;
             line-height: 25px;
         }
 
@@ -202,6 +205,7 @@
             cursor: pointer;
         }
 
+        /*
         #footer {
             width: 100%;
             margin: 10px 10px;
@@ -210,16 +214,19 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             height: 0px;
             padding: 0px;
-            /* display below the button to allow clicking if overlay covers scrren */
-            z-index: 9000;
-            position: absolute;
+            */
+        /* display below the button to allow clicking if overlay covers scrren */
+        /* z-index: 9000;
+        position: absolute;
+        */
 
-            /* Hide the footer be default. This should not contain too much info.*/
-            /* Like to a new page for extended content. */
+        /* Hide the footer be default. This should not contain too much info.*/
+        /* Like to a new page for extended content. */
 
-            bottom: -10px;
-            /* if too much is included, enable scroll */
-            overflow: scroll;
+        /*bottom: -10px; */
+        /* if too much is included, enable scroll */
+        /*
+        overflow: scroll;
         }
 
         #footer div {
@@ -232,6 +239,8 @@
             height: 10vh;
             margin: 10px;
         }
+
+        */
     </style>
 </head>
 
@@ -273,7 +282,7 @@
 </header>
 
 <div id='map'></div>
-
+<!--
 <div id='footer'>
     <div><img src="https://uky-gis.github.io/graphics/logo-color-400px.png" class="footer-img">
         <h4> CARDIAC-RELATED CHRONIC CONDITIONS PREVALENCE & COSTS - KENTUCKY (2017)</h4>
@@ -286,7 +295,7 @@
 
     </div>
 </div>
-
+-->
 <!-----------------------------------------------  CREATE 5 COLUMNS   --------------------------------------------------->
 <footer>
     <div id="theList">
@@ -584,7 +593,7 @@
 
             // create h1 element and add the statewide percentage
             $("#theList").prepend("<h2>" + tblText + "</h2><h5> - " + category +
-                "</h5><br><h6>" + "National Average: " + natAvg + catSymb + ";" +
+                "</h5><h6>" + "National Average: " + natAvg + catSymb + ";" +
                 "        State Average: " + stAvg + catSymb + "</h6><h3>County rank</h3>");
 
             $("#theList").children("div").append("<br style='padding-top:6px'>")
@@ -635,7 +644,7 @@
 
             };
 
-            // create h1 element and add the statewide percentage
+            // create h2 element and add the statewide percentage
             $("#theList").prepend("<h2>" + tblText + "</h2><h5> - " + category +
                 "</h5><h6>National Average: " + catSymb + parseInt(natAvg).toLocaleString() +
                 ";       State Average: " + catSymb + parseInt(stAvg).toLocaleString() + "</h6><h3>County rank</h3>"
