--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
             /*override the default style for the Leaflet's zoom */
             background: rgba(247, 240, 236, 0.8);
             color: rgba(129, 48, 2, 0.7);
-            border: 2px solid rgba(129, 48, 2, 0.7);
-            box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(129, 48, 2, 0.7);
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
         }
 
         #info-button {
@@ -502,7 +502,10 @@
     function drawTable(data, optionSelect) {
 
         // empty the div element with the ID theList
-        $("#theList").children().empty()
+        $("#theList").empty();
+
+        // Add the data div's
+        $('#theList').prepend("<div></div><div></div><div></div><div></div><div></div><div></div>");
         //console.log(data);
 
 
