comment on your solution

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             //$("#theList").children().empty();
             // console.log("after", $("#theList"));
             /****/
-
+            // Good find!
             $("#theList").empty();
 
             // Add the data div's
