css for mobile devices

--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
             width: 100%;
             top: 12%;
             /*bottom: 0; */
-            height: 580px;
+            height: 50vh;
             /*position: absolute;*/
             /*margin: 10px*/
             background: rgba(253, 117, 54, 0.8);
             border: 2px solid #dddedf;
+            margin: 20px auto;
         }
 
         #theList {
@@ -241,6 +242,12 @@
         }
 
         */
+
+        @media only screen and (max-width: 900px) {
+            #map {
+                width: 85%;
+            }
+            }
     </style>
 </head>
 
