more css for mobile

--- a/index.html
+++ b/index.html
@@ -246,7 +246,17 @@
         @media only screen and (max-width: 900px) {
             #map {
                 width: 85%;
+                height: 70vh
             }
+            h2 {
+                display:inline;
+            }
+
+            #chonicdisease {
+                background-color: #fff;
+                margin-top: 15px;
+            }
+            
             }
     </style>
 </head>
